completed day one of 2

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <button id="paper">Paper</button>
   <button id="scissors">Scissors</button>
 
+  <!--displaying scores-->
+  <p id="score">Score - You: 0 | Computer: 0</p>
+
+  <!--reset button -->
+  <button id="reset">Reset</button>
+
   <script src="app.js"></script>
 </body>
 </html>
